<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:fontFamily="@font/playfair_regular"
        android:id="@+id/menu_home"
        android:icon="@drawable/home"
        android:title="@string/home">
    </item>
        <item
            android:id="@+id/menu_partidos"
            android:fontFamily="@font/playfair_regular"
            android:title="@string/partidos">
            <menu
                android:fontFamily="@font/playfair_regular"
                android:icon="@drawable/waterpolo_icon"
                >
                <item
                    android:fontFamily="@font/playfair_regular"
                    android:id="@+id/menu_partidos_cadete"
                    android:title="@string/cadete"/>
                <item
                    android:fontFamily="@font/playfair_regular"
                    android:id="@+id/menu_partidos_juvenil"
                    android:title="@string/juvenilf"/>
                <item
                    android:fontFamily="@font/playfair_regular"
                    android:id="@+id/menu_partidos_senior"
                    android:title="@string/senior"/>
            </menu>
        </item>

        <item
            android:fontFamily="@font/playfair_regular"
            android:id="@+id/menu_clasificacion"
            android:title="@string/clasi">
            <menu>
                <item
                    android:fontFamily="@font/playfair_regular"
                    android:id="@+id/menu_clasi_cadete"
                    android:title="@string/cadete"/>
                <item
                    android:fontFamily="@font/playfair_regular"
                    android:id="@+id/menu_clasi_juvenil"
                    android:title="@string/juvenilf"/>
                <item
                    android:fontFamily="@font/playfair_regular"
                    android:id="@+id/menu_clasi_senior"
                    android:title="@string/senior"/>
            </menu>
        </item>
        <item
            android:fontFamily="@font/playfair_regular"
            android:id="@+id/menu_coches"
            android:icon="@drawable/car"
            android:title="@string/coches">
        </item>
    <item
        android:fontFamily="@font/playfair_regular"
        android:id="@+id/menu_mesas"
        android:icon="@drawable/table"
        android:title="@string/mesas">
    </item>

</menu>