<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color_fortuna">

    <Button
        android:id="@+id/btnPartidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="120dp"
        android:drawableLeft="@drawable/waterpolo_icon"
        android:background="@drawable/rounded_button"
        android:text="@string/partidos" />

    <Button
        android:id="@+id/btnMesas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:layout_alignTop="@+id/btnPartidos"
        android:background="@drawable/rounded_button"
        android:drawableLeft="@drawable/table"
        android:text="@string/mesas" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:textColor="#FFFFFF"
        android:text="@string/infoFortuna"
        android:textSize="35dp" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="365dp"
        android:layout_height="324dp"
        android:layout_below="@+id/btnPartidos"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="75dp">

        <ListView
            android:id="@+id/listView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent">

        </ListView>

    </android.support.constraint.ConstraintLayout>


</RelativeLayout>