<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"

    >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:text="@string/infoFortuna"
        android:textColor="#FFFFFF"
        android:textSize="35dp" />

    <TextView
        android:id="@+id/tvSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="96dp"
        android:text="Seleccion"
        android:textColor="#FFFFFF"
        android:textSize="30dp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp">

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            tools:layout_editor_absoluteX="0dp">

        </ListView>

    </RelativeLayout>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/btnActions"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        fab:fab_addButtonColorNormal="@color/colorAccent"
        fab:fab_addButtonColorPressed="@color/itemColor2"
        fab:fab_addButtonPlusIconColor="@color/white"

        fab:fab_labelStyle="@style/menu_labels_style">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/showPartidos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_colorPressed="@color/white_pressed"
            fab:fab_icon="@drawable/waterpolo_icon"
            fab:fab_title="@string/partidos" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/showMesas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_colorPressed="@color/white_pressed"
            fab:fab_icon="@drawable/table"
            fab:fab_title="@string/mesas" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/showCoches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_colorPressed="@color/white_pressed"
            fab:fab_icon="@drawable/car"
            fab:fab_title="@string/coches" />
    </com.getbase.floatingactionbutton.FloatingActionsMenu>


</RelativeLayout>